# CustomServer/gen/restapi/operations/student/get_student.go
@@ -1,0 +1,58 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package student
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the generate command
+
+import (
+	"net/http"
+
+	middleware "github.com/go-openapi/runtime/middleware"
+)
+
+// GetStudentHandlerFunc turns a function with the right signature into a get student handler
+type GetStudentHandlerFunc func(GetStudentParams) middleware.Responder
+
+// Handle executing the request and returning a response
+func (fn GetStudentHandlerFunc) Handle(params GetStudentParams) middleware.Responder {
+	return fn(params)
+}
+
+// GetStudentHandler interface for that can handle valid get student params
+type GetStudentHandler interface {
+	Handle(GetStudentParams) middleware.Responder
+}
+
+// NewGetStudent creates a new http.Handler for the get student operation
+func NewGetStudent(ctx *middleware.Context, handler GetStudentHandler) *GetStudent {
+	return &GetStudent{Context: ctx, Handler: handler}
+}
+
+/*GetStudent swagger:route GET /student student getStudent
+
+GetStudent get student API
+
+*/
+type GetStudent struct {
+	Context *middleware.Context
+	Handler GetStudentHandler
+}
+
+func (o *GetStudent) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
+	route, rCtx, _ := o.Context.RouteInfo(r)
+	if rCtx != nil {
+		r = rCtx
+	}
+	var Params = NewGetStudentParams()
+
+	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+
+	res := o.Handler.Handle(Params) // actually handle the request
+
+	o.Context.Respond(rw, r, route.Produces, route, res)
+
+}
