# CustomServer/swagger/swagger.yml
@@ -2,34 +2,26 @@ swagger: '2.0'
 info:
   version: 1.0.0
   title: Student Server
+
+consumes:
+  - application/json
+produces:
+  - application/json
+
 paths:
   /student:
     get:
+      tags:
+        - student
       produces:
         - text/plain
       parameters:
-        - name: name
-          required: false
-          type: string
-          in: query
-          description: defaults to Adil if not given
-        - name: Department
-          required: false
-          type: string
-          in: query
-          description: defaults to CS if not given
-        - name: age
-          type: integer
-          format:  int32
-          in: query
-          required: false
-          description: Should be greater than 20
-        - name: enrollment
+        - name: id
+          required: true
           type: integer
           format: int64
           in: query
-          required: false
-          description: It is int64
+          description: ID to get student information
       operationId: GetStudent
       responses:
         200:
@@ -38,66 +30,37 @@ paths:
             type: string
             description: contains a Student Informations
     post:
-      produces:
-        - text/plain
-      parameters:
-        - name: name
-          required: false
-          type: string
-          in: query
-          description: defaults to Adil if not given
-        - name: Department
-          required: false
-          type: string
-          in: query
-          description: defaults to CS if not given
-        - name: age
-          type: integer
-          format:  int32
-          in: query
-          required: false
-          description: Should be greater than 20
-        - name: enrollment
-          type: integer
-          format: int64
-          in: query
-          required: false
-          description: It is int64
+      tags:
+        - student
       operationId: PostStudent
+      parameters:
+        - name: body
+          in: body
+          schema:
+            $ref: "#/definitions/student"
       responses:
         200:
-          description: returns a Student Informations
+          description: contains a Student Informations
           schema:
             type: string
             description: contains a Student Informations
 
+  /{id}:
+    parameters:
+      - type: integer
+        format: int64
+        name: id
+        in: path
+        required: true
     put:
-      produces:
-        - text/plain
-      parameters:
-        - name: name
-          required: false
-          type: string
-          in: query
-          description: defaults to Adil if not given
-        - name: Department
-          required: false
-          type: string
-          in: query
-          description: defaults to CS if not given
-        - name: age
-          type: integer
-          format:  int32
-          in: query
-          required: false
-          description: Should be greater than 20
-        - name: enrollment
-          type: integer
-          format: int64
-          in: query
-          required: false
-          description: It is int64
+      tags:
+        - student
       operationId: PutStudent
+      parameters:
+        - name: body
+          in: body
+          schema:
+            $ref: '#/definitions/student'
       responses:
         200:
           description: returns a Student Informations
@@ -106,18 +69,60 @@ paths:
             description: contains a Student Informations
 
     delete:
-      produces:
-        - text/plain
-      parameters:
-        - name: Id
-          required: false
-          type: string
-          in: query
-          description: Add Id
+      tags:
+        - student
       operationId: DeleteStudent
       responses:
-        200:
-          description: returns a Student Informations
+        204:
+          description: Delete a Student Informations
           schema:
             type: string
-            description: contains a Student Informations
+            description: Delete a Student Informations
+
+  /studentlist:
+    get:
+      tags:
+        - student
+      produces:
+        - text/plain
+      operationId: GetStudentList
+      responses:
+        200:
+          description: returns list of Student
+          schema:
+            type: string
+            description: contains list of Student
+
+
+definitions:
+  student:
+    type: object
+    required:
+      - name
+      - department
+      - enrollment
+      - age
+    properties:
+      id:
+        type: integer
+        format: int64
+        readOnly: true
+      enrollment:
+        type: integer
+        format: int64
+      name:
+        type: string
+        minLength: 1
+      age:
+        type: integer
+        format: int32
+      department:
+        type: string
+        minLength: 1
+
+
+
+
+
+
+
